font end is dark mode now. fixed a bunch of bugs...

--- a/static/css/tv2_init.css
+++ b/static/css/tv2_init.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(44, 44, 44);
     color: white;
+    font-family: -apple-system, sans-serif;
     height: 100%;
     width: 100%;
 }
@@ -10,10 +11,12 @@ body {
     border-radius: 5px;
     box-shadow: white 2px 2px;
     color: white;
+    cursor: pointer;
     min-width: 70px;
     padding: 3px;
     text-align: center;
     text-shadow: black 1px 1px;
+    user-select: none;
 }
 
 .button:active {
@@ -27,18 +30,23 @@ body {
     border-radius: 5px;
     box-shadow: white 2px 2px;
     color: white;
-    font-weight: bold;
+    cursor: pointer;
     font-size: larger;
-    padding: 4px;
++    padding: 4px;
     text-align: center;
     text-shadow: black 1px 1px;
+    user-select: none;
     width: 15px ;
 }
+
 .button_close_x:active {
     box-shadow: inset black 2px 2px;
     font-weight: bold;
 }
 
+#button_create {
+    background-color: rgb(0, 255, 25, 0.50);
+}
 
 .err_message {
 
