--- a/static/css/tv2_tasks.css
+++ b/static/css/tv2_tasks.css
@@ -1,7 +1,3 @@
-.button_create {
-
-}
-
 .button_delete {
     background-color: red;
     color: white;
@@ -185,12 +181,10 @@
 }
 
 #task_choose_one {
-    /*border: black solid 1px;*/
     text-align: center;
 }
 
 #task_choose_series {
-    /*border: black solid 1px;*/
     text-align: center;
 }
 
